fix: fixed accordion bodies height

--- a/datacenter-project/#src/components/for-clients/_document.html
+++ b/datacenter-project/#src/components/for-clients/_document.html
@@ -1,7 +1,7 @@
 <section class="document section-padding">
     <div class="container document__container">
-        <h1 class="document__title">Документы</h1>
-        <p class="document__subtitle">ООО "Датахата"</p>
+        <h1 class="title">Документы</h1>
+        <p class="paragraph paragraph_bold">ООО "Датахата"</p>
         <a class="document-block" href="">Публичный договор возмездного оказания услуг</a>
         <a class="document-block" href="">Политика конфиденциальности</a>
         <a class="document-block" href="">Соглашение на пользование услугами</a>
