--- a/datacenter-project/#src/components/for-clients/_instruction.html
+++ b/datacenter-project/#src/components/for-clients/_instruction.html
@@ -1,8 +1,8 @@
 <section class="instruction section-padding">
-    <div class="container layout-2-column">
+    <div class="container layout-2-column layout-2-column_reverse">
         <div class="instruction__content">
-            <h1 class="instruction__title">Как разместить сервер</h1>
-            <p class="instruction__subtitle">
+            <h1 class="title title_left">Как разместить сервер</h1>
+            <p class="paragraph paragraph_bold">
                 Для того, что бы стать нашим клиентом и разместить оборудование в нашем дата-центре, вам
                 необходимо:
             </p>
