--- a/datacenter-project/#src/components/for-clients/_payments.html
+++ b/datacenter-project/#src/components/for-clients/_payments.html
@@ -1,8 +1,8 @@
 <section class="payments section-padding">
     <div class="container payments__container">
-        <div class="layout-2-column">
+        <div class="layout-2-column layout-2-column_reverse">
             <div class="payments__content">
-                <h1 class="payments__title">Способы оплаты</h1>
+                <h1 class="title title_left">Способы оплаты</h1>
                 <p class="paragraph">Оплатить наши услуги можно через Ваш личный кабинет. Для создания счета
                     воспользуйтесь
                     кнопкой "Пополнить баланс" на главной странице личного кабинета. В разделе "Платежи" можно
@@ -12,7 +12,7 @@
                     списывается
                     ежедневно равными долями.</p>
                 <div class="payments__cards">
-                    <p class="payments__subtitle">Способы оплаты для физических лиц:</p>
+                    <p class="paragraph paragraph_bold">Способы оплаты для физических лиц:</p>
                     <div class="card">
                         <p class="card__title">Способы оплаты</p>
                         <div class="card__images layout-4-column">
@@ -42,7 +42,7 @@
         </div>
         <div class="layout-2-column">
             <div class="payments__content">
-                <p class="payments__subtitle">Оплата по безналичному расчету</p>
+                <p class="paragraph paragraph_bold">Оплата по безналичному расчету</p>
                 <p class="paragraph">Оплатить наши услуги можно через Ваш личный кабинет. Для создания счета
                     воспользуйтесь
                     кнопкой "Пополнить баланс" на главной странице личного кабинета. В разделе "Платежи" можно
@@ -58,13 +58,13 @@
                 <img src="img/main-about/about.png" alt="section-img">
             </div>
             <div class="payments__content">
-                <p class="payments__subtitle">Наши реквизиты</p>
+                <p class="paragraph paragraph_bold">Наши реквизиты</p>
                 @@include('../company/details/_details-data.html')
             </div>
         </div>
-        <div class="layout-2-column">
+        <div class="layout-2-column layout-2-column_reverse">
             <div class="payments__content">
-                <p class="payments__subtitle">Условия оплаты банковскими картами</p>
+                <p class="paragraph paragraph_bold">Условия оплаты банковскими картами</p>
                 <ol class="payments__ordered-list">
                     <li>Оплата по пластиковым картам производится совместно с ОАО АСБ "Беларусбанк" и ООО
                         "Компания электронных платежей "АССИСТ".
