--- a/datacenter-project/#src/components/for-clients/_support.html
+++ b/datacenter-project/#src/components/for-clients/_support.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="layout-2-column">
             <div class="support__content">
-                <h1 class="support__title">Техническая поддержка</h1>
+                <h1 class="title title_left">Техническая поддержка</h1>
                 <p class="paragraph">Служба технической поддержки Датахата готова помочь вам 24 часа в сутки, 7 дней в неделю.</p>
                 <p class="paragraph">Кроме этого, у нас есть команда инженеров, выполняющих работы по обслуживанию серверов и
                     IT-инфраструктуры заказчиков на договорной основе.</p>
@@ -17,7 +17,7 @@
         </div>
         <div class="layout-2-column">
             <div class="support__content">
-                <p class="payments__subtitle">Перечень того, что мы делаем бесплатно <br> (заявка через тикет):</p>
+                <p class="paragraph paragraph_bold">Перечень того, что мы делаем бесплатно <br> (заявка через тикет):</p>
                 <ul class="list">
                     <li>Консультации по вопросам эксплуатации вашего оборудования в датацентре;</li>
                     <li>Холодная перезагрузка вашего оборудования по запросу;</li>
@@ -26,7 +26,7 @@
                 </ul>
             </div>
             <div class="support__content">
-                <p class="payments__subtitle">Если вам нужно:</p>
+                <p class="paragraph paragraph_bold">Если вам нужно:</p>
                 <ul class="list">
                     <li>Администрирование вашего оборудования в дата-центре;</li>
                     <li>Мониторинг и реагирование на возникшие проблемы 24/7;</li>
@@ -40,35 +40,5 @@
             </div>
 
         </div>
-
-        <!--        <div class="support-section-container">-->
-        <!--           -->
-        <!--            <div class="support-container-item">-->
-        <!--                <div class="support-container-text">-->
-        <!--                    <h2>Перечень того, что мы делаем бесплатно (заявка через тикет):</h2>-->
-        <!--                    <ul>-->
-        <!--                        <li>Консультации по вопросам эксплуатации вашего оборудования в датацентре;</li>-->
-        <!--                        <li>Холодная перезагрузка вашего оборудования по запросу;</li>-->
-        <!--                        <li>Подключение IP-KVM к вашему серверу;</li>-->
-        <!--                        <li>Установка ОС из списка поддерживаемых на арендованный у нас сервер.</li>-->
-        <!--                    </ul>-->
-        <!--                </div>-->
-        <!--            </div>-->
-        <!--            <div class="support-container-item">-->
-        <!--                <div class="support-container-text">-->
-        <!--                    <h2>Если вам нужно:</h2>-->
-        <!--                    <ul>-->
-        <!--                        <li>Администрирование вашего оборудования в дата-центре;</li>-->
-        <!--                        <li>Мониторинг и реагирование на возникшие проблемы 24/7;</li>-->
-        <!--                        <li>Администрирование вашего офисного IT-оборудования и сети;</li>-->
-        <!--                        <li>Нестандартные технологические решения.</li>-->
-        <!--                    </ul>-->
-        <!--                    <p>Мы готовы обсудить с вами условия сотрудничества, напишите нам на <span>sales@datahata.by</span>-->
-        <!--                    </p>-->
-        <!--                    <p>Узнать больше о услугах IT-аутсорсинга вы можете <a href="https://xn&#45;&#45;80aikcthwb9g.xn&#45;&#45;90ais/">по-->
-        <!--                            ссылке</a></p>-->
-        <!--                </div>-->
-        <!--            </div>-->
-        <!--        </div>-->
     </div>
 </section>
