--- a/datacenter-project/#src/components/for-clients/_visited.html
+++ b/datacenter-project/#src/components/for-clients/_visited.html
@@ -1,7 +1,7 @@
 <section class="visited section-padding">
-    <div class="container layout-2-column">
+    <div class="container layout-2-column layout-2-column_reverse">
         <div class="visited__content">
-            <h1 class="visited__title">Правила посещения датацентра</h1>
+            <h1 class="title title_left">Правила посещения датацентра</h1>
             <p class="paragraph">Для бронирования рабочего места в операторской дата-центра необходимо уведомить об
                 этом наших
                 сотрудников в соответствии с договором не менее чем за 24 часа до посещения; в экстренных случаях
