refactor: refactor advice page

--- a/datacenter-project/#src/scss/style.scss
+++ b/datacenter-project/#src/scss/style.scss
@@ -56,8 +56,8 @@
 @import "./components/for-clients/payments";
 @import "./components/for-clients/document";
 
-
-@import "./components/advices";
+//info
+@import "./components/info/advices";
 @import "./components/new-partners";
 
 
