refactor: refactor form js

--- a/datacenter-project/#src/components/info/_newpartners.html
+++ b/datacenter-project/#src/components/info/_newpartners.html
@@ -29,36 +29,37 @@
 
         </div>
     </div>
-    <!--    <div class="wrapper-partners">-->
-    <!--        <div class="partners-container">-->
-    <!--            <div class="partners-form">-->
-    <!--                <div class="close-icon" id="close-icon-partners">-->
-    <!--                    <span class="close"></span>-->
-    <!--                </div>-->
-    <!--                <div class="swipe-line" id="partners-swipe-line" data-swipe-threshold="20" data-swipe-timeout="500"-->
-    <!--                    data-swipe-ignore="false">-->
-    <!--                </div>-->
-    <!--                <div class="form-title" id="form-title">Заявка на партнёрскую программу</div>-->
-    <!--                <form action="#" id="form" class="partner-form-container">-->
-    <!--                    <input class="req" type="text" name="name" placeholder="Ваше имя">-->
-    <!--                    <input class="email req" type="email" name="email" placeholder="Почта">-->
-    <!--                    <textarea name="message" id="textarea" cols="10" rows="7"-->
-    <!--                        placeholder="Сообщение (не обязательно)"></textarea>-->
-    <!--                    <button type="submit" id="send-btn"-->
-    <!--                        class="btn-gr-bg partners-btn-send"><span>Отправить</span></button>-->
-    <!--                </form>-->
-    <!--                <div class="form-send">-->
+        <div class="new-partners__overlay">
+            <div class="new-partners__container">
+                <div class="form__container">
+                    <div class="close-icon" id="close-icon-partners">
+                        <span class="close"></span>
+                    </div>
+                    <div class="swipe-line" id="partners-swipe-line" data-swipe-threshold="20" data-swipe-timeout="500"
+                        data-swipe-ignore="false">
+                    </div>
 
-    <!--                    <div class="form-image">-->
-    <!--                        <div class="form-image-layer">-->
-    <!--                            <img src="img/icons/success.svg" alt="post">-->
-    <!--                        </div>-->
-    <!--                    </div>-->
-    <!--                    <div class="form-title">Заявка отправлена!</div>-->
-    <!--                    <div class="form-message">Спасибо за ваше сообщение! Мы ответим вам в течении дня.</div>-->
-    <!--                    <a href="index.html" class="btn-gr-bg partners-btn-send"><span>Вернуться на главную</span></a>-->
-    <!--                </div>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--    </div>-->
+                    <form action="#" id="form" class="form">
+                        <p class="paragraph paragraph_bold">Заявка на партнёрскую программу</p>
+                        <input class="req" type="text" name="name" placeholder="Ваше имя">
+                        <input class="email req" type="email" name="email" placeholder="Почта">
+                        <textarea name="message" id="textarea" cols="10" rows="7"
+                            placeholder="Сообщение (не обязательно)"></textarea>
+                        <button type="submit" id="send-btn"
+                            class="button button_colored send__btn"><span>Отправить</span></button>
+                    </form>
+                    <div class="form__result">
+                        <div class="form__result-image">
+                            <div class="form__result-image-layer">
+                                <img src="img/icons/success.svg" alt="post">
+                            </div>
+                        </div>
+                        <p class="paragraph paragraph_bold">Заявка отправлена!</p>
+                        <p class="paragraph">Спасибо за ваше сообщение! </p>
+                        <p class="paragraph">Мы ответим вам в течении дня.</p>
+                        <a href="index.html" class="button button_colored send__btn"><span>Вернуться на главную</span></a>
+                    </div>
+                </div>
+            </div>
+        </div>
 </section>
