--- a/datacenter-project/#src/scss/components/partners.scss
+++ b/datacenter-project/#src/scss/components/partners.scss
@@ -1,7 +1,7 @@
 // Partners section
 
 .main-section-partners {
-    .partners-container {
+    .new-partners__container {
         position: relative;
         min-height: 340px;
         display: flex;
