--- a/datacenter-project/#src/components/main/_partners.html
+++ b/datacenter-project/#src/components/main/_partners.html
@@ -1,6 +1,6 @@
 <section class="main-section-partners section-padding">
    <div class="container">
-      <div class="partners-container">
+      <div class="new-partners__container">
          <h2>Наши партнёры и клиенты</h2>
          <div class="section-partners">
             <div class="section-partners-item">
